<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailPlaceActivity">


        <TextView
            android:id="@+id/namePlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/comuna13"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imagePlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/namePlace"
            app:srcCompat="@drawable/comuna13" />

        <RatingBar
            android:id="@+id/ratingPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:isIndicator="true"
            android:numStars="5"
            android:progressTint="#3700FF"
            android:rating="4.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagePlace" />

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="15dp"
            android:text="@string/locationTitle"
            android:textColor="#F27C47"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingPlace" />

        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="34dp"
            android:justificationMode="inter_word"
            android:text="@string/location"
            android:textColor="#040404"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationTitle" />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="10dp"
            android:text="@string/description_title"
            android:textColor="#F27C47"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="34dp"
            android:fontFamily="sans-serif"
            android:justificationMode="inter_word"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle" />

        <TextView
            android:id="@+id/temperature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="15dp"
            android:text="@string/temperature_title"
            android:textColor="#F27C47"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/temperature"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/recommend_title"
            app:layout_constraintStart_toEndOf="@+id/temperature_title"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/recommend_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="15dp"
            android:text="@string/recommend_places"
            android:textColor="#F27C47"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature_title" />

        <TextView
            android:id="@+id/recommendPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="34dp"
            android:layout_marginBottom="30dp"
            android:justificationMode="inter_word"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recommend_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>